# Back/swagger.json
@@ -1,133 +1,216 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-      "title": "MERN API - Immobilier",
-      "version": "1.0.0",
-      "description": "API documentation for the MERN Immobilier application"
+  "openapi": "3.0.0",
+  "info": {
+    "title": "MERN API - Immobilier",
+    "version": "1.0.0",
+    "description": "API documentation for the MERN Immobilier application"
+  },
+  "servers": [
+    {
+      "url": "http://localhost:8000"
+    }
+  ],
+  "tags": [
+    {
+      "name": "auth",
+      "description": "Authentication related endpoints"
     },
-    "servers": [
-      {
-        "url": "http://localhost:5000"
-      }
-    ],
-    "tags": [
-      {
-        "name": "auth",
-        "description": "Authentication related endpoints"
-      }
-    ],
-    "paths": {
-      "/signUp": {
-        "post": {
-          "tags": ["auth"],
-          "summary": "Sign Up",
-          "description": "Register a new user",
-          "requestBody": {
-            "required": true,
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "username": {
-                      "type": "string"
-                    },
-                    "email": {
-                      "type": "string"
-                    },
-                    "password": {
-                      "type": "string"
-                    }
+    {
+      "name": "user",
+      "description": "User profile related endpoints"
+    }
+  ],
+  "paths": {
+    "/signUp": {
+      "post": {
+        "tags": ["auth"],
+        "summary": "Sign Up",
+        "description": "Register a new user",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "type": "string"
                   },
-                  "required": ["username", "email", "password"]
-                }
+                  "email": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
+                },
+                "required": ["username", "email", "password"]
               }
-            }
-          },
-          "responses": {
-            "200": {
-              "description": "Successful registration"
-            },
-            "400": {
-              "description": "This email is already associated with an account"
-            },
-            "500": {
-              "description": "Internal server error"
             }
           }
-        }
-      },
-      "/signIn": {
-        "post": {
-          "tags": ["auth"],
-          "summary": "Sign In",
-          "description": "Authenticate an existing user",
-          "requestBody": {
-            "required": true,
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "email": {
-                      "type": "string"
-                    },
-                    "password": {
-                      "type": "string"
-                    }
-                  },
-                  "required": ["email", "password"]
-                }
-              }
-            }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful registration"
           },
-          "responses": {
-            "200": {
-              "description": "Successful authentication"
-            },
-            "400": {
-              "description": "Incorrect authentication information"
-            },
-            "500": {
-              "description": "Internal server error"
-            }
+          "400": {
+            "description": "This email is already associated with an account"
+          },
+          "500": {
+            "description": "Internal server error"
           }
         }
-      },
-      "/googleAuth": {
-        "post": {
-          "tags": ["auth"],
-          "summary": "Google Authentication",
-          "description": "Authenticate a user using Google OAuth",
-          "requestBody": {
-            "required": true,
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "code": {
-                      "type": "string"
-                    }
+      }
+    },
+    "/signIn": {
+      "post": {
+        "tags": ["auth"],
+        "summary": "Sign In",
+        "description": "Authenticate an existing user",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string"
                   },
-                  "required": ["code"]
-                }
+                  "password": {
+                    "type": "string"
+                  }
+                },
+                "required": ["email", "password"]
               }
             }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful authentication"
           },
-          "responses": {
-            "200": {
-              "description": "Authentication successful"
-            },
-            "400": {
-              "description": "Bad request"
-            },
-            "500": {
-              "description": "Internal server error"
+          "400": {
+            "description": "Incorrect authentication information"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/googleAuth": {
+      "post": {
+        "tags": ["auth"],
+        "summary": "Google Authentication",
+        "description": "Authenticate a user using Google OAuth",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "code": {
+                    "type": "string"
+                  }
+                },
+                "required": ["code"]
+              }
             }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Authentication successful"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/Profile": {
+      "get": {
+        "tags": ["user"],
+        "summary": "Get User Profile",
+        "description": "Retrieve the profile information of the authenticated user",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful retrieval of user profile"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/EditeProfile": {
+      "put": {
+        "tags": ["user"],
+        "summary": "Edit User Profile",
+        "description": "Edit the profile information of the authenticated user",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "type": "string"
+                  },
+                  "email": {
+                    "type": "string"
+                  },
+                  "phone": {
+                    "type": "string"
+                  },
+                  "profileImage": {
+                    "type": "string"
+                  }
+                },
+                "required": ["username", "email"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful profile update"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Internal server error"
           }
         }
       }
     }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
   }
-  
+}
